Entries are sorted chronologically from oldest to youngest within each release,
releases are sorted from youngest to oldest.

version <next>:


version 8.0:
- Drop support for OpenSSL < 1.1.0
- yasm support dropped, users need to use nasm
- aasrc audio filter
- peakpass audio filter
- audio invert filter
- audio envelope filter
- audio wiener filter
- RV60 video decoder
- OpenMAX encoders deprecated
- HVQM2 video decoder
- ADPCM IMA HVQM2 audio decoder
- HVQM2 demuxer
- ILDA video decoder and ILDA demuxer
- ADPCM IMA XBOX audio decoder
- native LC3 audio decoder
- ADPCM N64 audio decoder
- TAC audio decoder and demuxer and parser
- AHX audio decoder and parser
- DWVW audio decoder
- UTK and UTK R3 audio decoder and demuxer
- EALAYER3 and EALAYER3MULTI audio decoder
- EALAYER3 demuxer
- Sample Vision demuxer (smp)
- RFB demuxer and video decoder
- UEBA demuxer
- L&H CELP decoder
- libx265 alpha layer encoding
- Enhanced FLV v2: Multitrack audio/video, modern codec support
- Wwise Vorbis audio decoder
- Wwise ADPCM Platinum audio decoder
- Animated JPEG XL encoding (via libjxl)
- ProRes RAW video decoder
- ainversion filter
- Blackmagic RAW video decoder
- VVC in Matroska
- non-linear 12bit PCM DAT decoder
- ADPCM IMA Magix audio decoder
- ADPCM Playstation C audio decoder
- ADPCM Circus audio decoder
- ADPCM IMA Escape audio decoder
- Sonarc audio decoder
- G.728 audio decoder
- DWD demuxer
- raw G.728 demuxer
- macbinary demuxer
- idsp demuxer and muxer
- bfwav demuxer
- bcwav demuxer
- bnsf demuxer
- sndb demuxer
- astb demuxer
- xpcm demuxer
- baf demuxer
- msnd demuxer
- mipu demuxer
- Perfect Clarity Audio (PCA) decoder and parser
- pngenc: set default prediction method to PAETH
- APV decoder and APV raw bitstream muxing and demuxing
- APV parser
- APV encoding support through a libopenapv wrapper
- plasma video source filter
- VVC decoder supports all content of SCC (Screen Content Coding):